--- a/configs/coolpi4_defconfig
+++ b/configs/coolpi4_defconfig
@@ -97,9 +97,9 @@ BR2_PACKAGE_E2FSPROGS=y
 BR2_PACKAGE_E2FSPROGS_E2IMAGE=y
 BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
 BR2_PACKAGE_GLMARK2=y
-BR2_PACKAGE_WAYLAND=y
+BR2_PACKAGE_PSPLASH=y
 BR2_PACKAGE_WESTON=y
-BR2_PACKAGE_WESTON_DRM=y
+BR2_PACKAGE_WESTON_WAYLAND=y
 BR2_PACKAGE_HDPARM=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_INPUT_EVENT_DAEMON=y
@@ -160,6 +160,10 @@ BR2_PACKAGE_DOCKER_ENGINE_DRIVER_DEVICEMAPPER=y
 BR2_PACKAGE_DOCKER_ENGINE_DRIVER_VFS=y
 BR2_PACKAGE_HTOP=y
 BR2_PACKAGE_PROCPS_NG=y
+BR2_PACKAGE_SHADOW=y
+BR2_PACKAGE_SHADOW_UTMPX=y
+BR2_PACKAGE_SHADOW_BCRYPT=y
+BR2_PACKAGE_SHADOW_YESCRYPT=y
 BR2_PACKAGE_TAR=y
 BR2_PACKAGE_NANO=y
 BR2_PACKAGE_VIM=y
