--- a/package/Config.in
+++ b/package/Config.in
@@ -2525,6 +2525,7 @@ menu "System tools"
 	source "package/quotatool/Config.in"
 	source "package/rauc/Config.in"
 	source "package/rsyslog/Config.in"
+	source "package/shadow/Config.in"
 	source "package/runc/Config.in"
 	source "package/s390-tools/Config.in"
 	source "package/s6/Config.in"
