auto start weston desktop

--- a/configs/coolpi4_defconfig
+++ b/configs/coolpi4_defconfig
@@ -88,6 +88,7 @@ BR2_PACKAGE_UNZIP=y
 BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_STRESS_NG=y
 BR2_PACKAGE_DOS2UNIX=y
+BR2_PACKAGE_GREP=y
 BR2_PACKAGE_SED=y
 BR2_PACKAGE_DOSFSTOOLS=y
 BR2_PACKAGE_DOSFSTOOLS_FATLABEL=y
@@ -112,10 +113,13 @@ BR2_PACKAGE_USBUTILS=y
 BR2_PACKAGE_WIPE=y
 BR2_PACKAGE_ALSA_PLUGINS=y
 BR2_PACKAGE_LIBMAD=y
+BR2_PACKAGE_LIBDRM_INSTALL_TESTS=y
 BR2_PACKAGE_LIBV4L=y
 BR2_PACKAGE_LIBV4L_UTILS=y
 BR2_PACKAGE_LIBCAMERA=y
 BR2_PACKAGE_LIBCAMERA_V4L2=y
+BR2_PACKAGE_NCURSES_WCHAR=y
+BR2_PACKAGE_NCURSES_TARGET_PROGS=y
 BR2_PACKAGE_BLUEZ_TOOLS=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
 BR2_PACKAGE_BRCM_PATCHRAM_PLUS=y
@@ -160,6 +164,7 @@ BR2_PACKAGE_DOCKER_ENGINE_DRIVER_DEVICEMAPPER=y
 BR2_PACKAGE_DOCKER_ENGINE_DRIVER_VFS=y
 BR2_PACKAGE_HTOP=y
 BR2_PACKAGE_PROCPS_NG=y
+BR2_PACKAGE_PSMISC=y
 BR2_PACKAGE_SHADOW=y
 BR2_PACKAGE_SHADOW_UTMPX=y
 BR2_PACKAGE_SHADOW_BCRYPT=y
