--- a/configs/coolpi4_defconfig
+++ b/configs/coolpi4_defconfig
@@ -97,6 +97,17 @@ BR2_PACKAGE_DOSFSTOOLS_MKFS_FAT=y
 BR2_PACKAGE_E2FSPROGS=y
 BR2_PACKAGE_E2FSPROGS_E2IMAGE=y
 BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
+BR2_PACKAGE_EXFAT=y
+BR2_PACKAGE_EXFAT_UTILS=y
+BR2_PACKAGE_NFS_UTILS=y
+BR2_PACKAGE_NFS_UTILS_NFSV4=y
+BR2_PACKAGE_NFS_UTILS_GSS=y
+BR2_PACKAGE_NFS_UTILS_RPCDEBUG=y
+BR2_PACKAGE_NFS_UTILS_RPC_LOCKD=y
+BR2_PACKAGE_NFS_UTILS_RPC_RQUOTAD=y
+BR2_PACKAGE_NTFS_3G=y
+BR2_PACKAGE_NTFS_3G_ENCRYPTED=y
+BR2_PACKAGE_NTFS_3G_NTFSPROGS=y
 BR2_PACKAGE_GLMARK2=y
 BR2_PACKAGE_PSPLASH=y
 BR2_PACKAGE_WESTON=y
@@ -113,11 +124,15 @@ BR2_PACKAGE_USBUTILS=y
 BR2_PACKAGE_WIPE=y
 BR2_PACKAGE_ALSA_PLUGINS=y
 BR2_PACKAGE_LIBMAD=y
+BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_LIBDRM_INSTALL_TESTS=y
 BR2_PACKAGE_LIBV4L=y
 BR2_PACKAGE_LIBV4L_UTILS=y
 BR2_PACKAGE_LIBCAMERA=y
 BR2_PACKAGE_LIBCAMERA_V4L2=y
+BR2_PACKAGE_LIBCURL=y
+BR2_PACKAGE_LIBCURL_CURL=y
+BR2_PACKAGE_LIBSECCOMP=y
 BR2_PACKAGE_NCURSES_WCHAR=y
 BR2_PACKAGE_NCURSES_TARGET_PROGS=y
 BR2_PACKAGE_BLUEZ_TOOLS=y
@@ -169,6 +184,7 @@ BR2_PACKAGE_SHADOW=y
 BR2_PACKAGE_SHADOW_UTMPX=y
 BR2_PACKAGE_SHADOW_BCRYPT=y
 BR2_PACKAGE_SHADOW_YESCRYPT=y
+BR2_PACKAGE_SYSTEMD_BOOTCHART=y
 BR2_PACKAGE_TAR=y
 BR2_PACKAGE_NANO=y
 BR2_PACKAGE_VIM=y
