--- a/configs/coolpi4_defconfig
+++ b/configs/coolpi4_defconfig
@@ -11,6 +11,7 @@ BR2_INIT_SYSTEMD=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="coolpi"
 BR2_SYSTEM_BIN_SH_BASH=y
 BR2_ROOTFS_OVERLAY="board/rockchip/coolpi4b/rootfs_overlay"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="board/rockchip/coolpi4b/post-image.sh"
 # BR2_PACKAGE_BUSYBOX is not set
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_ALSACONF=y
@@ -199,4 +200,8 @@ BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="512M"
 BR2_TARGET_ROOTFS_TAR_GZIP=y
+BR2_PACKAGE_HOST_DOSFSTOOLS=y
+BR2_PACKAGE_HOST_GENEXT2FS=y
+BR2_PACKAGE_HOST_GENIMAGE=y
+BR2_PACKAGE_HOST_MTOOLS=y
 BR2_PACKAGE_HOST_PYTHON=y
