update image cfg

--- a/configs/coolpi4_defconfig
+++ b/configs/coolpi4_defconfig
@@ -198,7 +198,8 @@ BR2_PACKAGE_ROCKCHIP_MPP=y
 BR2_PACKAGE_ROCKCHIP_MPP_ALLOCATOR_DRM=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
-BR2_TARGET_ROOTFS_EXT2_SIZE="512M"
+BR2_TARGET_ROOTFS_EXT2_LABEL="writable"
+BR2_TARGET_ROOTFS_EXT2_SIZE="800M"
 BR2_TARGET_ROOTFS_TAR_GZIP=y
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_GENEXT2FS=y
