update for build kernel

--- a/configs/coolpi4_defconfig
+++ b/configs/coolpi4_defconfig
@@ -12,6 +12,13 @@ BR2_TARGET_GENERIC_ROOT_PASSWD="coolpi"
 BR2_SYSTEM_BIN_SH_BASH=y
 BR2_ROOTFS_OVERLAY="board/rockchip/coolpi4b/rootfs_overlay"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/rockchip/coolpi4b/post-image.sh"
+BR2_LINUX_KERNEL=y
+BR2_LINUX_KERNEL_CUSTOM_GIT=y
+BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/yanyitech/coolpi-kernel.git"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="origin/develop"
+BR2_LINUX_KERNEL_DEFCONFIG="rk3588s_cp4b"
+BR2_LINUX_KERNEL_DTS_SUPPORT=y
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="rockchip/rk3588s-cp4"
 # BR2_PACKAGE_BUSYBOX is not set
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_ALSACONF=y
