update genimage cfg

--- a/board/rockchip/coolpi4b/genimage-coolpi4b.cfg
+++ b/board/rockchip/coolpi4b/genimage-coolpi4b.cfg
@@ -3,7 +3,7 @@ image boot.vfat {
 		files = {
 			"cmdline.txt",
 			"config.txt",
-			"extlinux/extlinux.conf",
+			"extlinux",
 			"Image",
 			"initrd.img",
 			"rk3588s-cp4.dtb",
