--- a/configs/coolpi5_defconfig
+++ b/configs/coolpi5_defconfig
@@ -145,11 +145,24 @@ BR2_PACKAGE_NCURSES_WCHAR=y
 BR2_PACKAGE_NCURSES_TARGET_PROGS=y
 BR2_PACKAGE_BLUEZ_TOOLS=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
+BR2_PACKAGE_BLUEZ5_UTILS_OBEX=y
+BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
+BR2_PACKAGE_BLUEZ5_UTILS_MONITOR=y
+BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
+BR2_PACKAGE_BLUEZ5_UTILS_EXPERIMENTAL=y
+BR2_PACKAGE_BLUEZ5_UTILS_PLUGINS_HEALTH=y
+BR2_PACKAGE_BLUEZ5_UTILS_PLUGINS_MESH=y
+BR2_PACKAGE_BLUEZ5_UTILS_PLUGINS_MIDI=y
+BR2_PACKAGE_BLUEZ5_UTILS_PLUGINS_NFC=y
+BR2_PACKAGE_BLUEZ5_UTILS_PLUGINS_SAP=y
+BR2_PACKAGE_BLUEZ5_UTILS_TOOLS_HID2HCI=y
 BR2_PACKAGE_BRCM_PATCHRAM_PLUS=y
 BR2_PACKAGE_BRIDGE_UTILS=y
+BR2_PACKAGE_CAN_UTILS=y
 BR2_PACKAGE_DHCP=y
 BR2_PACKAGE_DHCP_CLIENT=y
 BR2_PACKAGE_ETHTOOL=y
+BR2_PACKAGE_HOSTAPD=y
 BR2_PACKAGE_IPERF=y
 BR2_PACKAGE_IPERF3=y
 BR2_PACKAGE_IPROUTE2=y
